--- a/src/css/styleAuth.scss
+++ b/src/css/styleAuth.scss
@@ -4,8 +4,9 @@
 
 body {
     background: #69bd43;
-    background: -webkit-linear-gradient(to right, #283c86, #45a247);
-    background: linear-gradient(to right, #283c86, #45a247);
+    /* background: -webkit-linear-gradient(to right, #283c86, #45a247);
+    background: linear-gradient(to right, #283c86, #45a247); */
+    background: linear-gradient(318deg, rgba(68,121,41,1) 0%, rgba(98,176,61,1) 36%, rgba(105,189,67,1) 78%, rgba(253,255,255,1) 100%);
     height: 100vh;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -24,7 +25,7 @@ form {
 
 form p {
     font-weight: 500;
-    color: #fff;
+    color: rgb(71, 69, 69);
     opacity: 0.7;
     font-size: 1.4rem;
     margin-top: 0;
@@ -34,7 +35,7 @@ form p {
 
 form a {
     text-decoration: none;
-    color: #ddd;
+    color: rgb(71, 69, 69);
     font-size: 15px;
 }
 
@@ -63,7 +64,7 @@ button {
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     box-shadow: 4px 4px 60px rgb(0, 0, 0, 0.2);
-    color: #fff !important;
+    color: rgb(71, 69, 69) !important;
     font-weight: 500 !important;
     transition: all 0.2s ease-in-out;
     text-shadow: 2px 2px 4px rgb(0, 0, 0, 0.2);
@@ -98,14 +99,14 @@ form:hover {
 ::-moz-placeholder {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    color: #fff !important;
+    color: rgb(71, 69, 69) !important;
     text-shadow: 2px 2px 4px rgb(0, 0, 0, 0.4) !important;
 }
 
 ::placeholder {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    color: #fff !important;
+    color: rgb(71, 69, 69) !important;
     text-shadow: 2px 2px 4px rgb(0, 0, 0, 0.4) !important;
 }
 
