--- a/src/css/styleAuth.scss
+++ b/src/css/styleAuth.scss
@@ -33,18 +33,16 @@ form p {
     text-shadow: 2px 2px 4px rgb(0, 0, 0, 0.2);
 }
 
-form a {
-    text-decoration: none;
-    color: rgb(71, 69, 69);
-    font-size: 15px;
+.q-focus-helper{
+    background: transparent !important;
+}
+.q-item__label{
+    margin: auto;
 }
 
-form a:hover {
-    text-shadow: 2px 2px 6px #00000040;
-}
-
-form a:active {
-    text-shadow: none;
+.q-item.q-router-link--active, .q-item--active {
+    color: #474545;
+    
 }
 
 .q-field__control:before,
