--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -9,10 +9,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 $primary: #69bd43;
-$secondary: #21BA45;
-$accent: #9C27B0;
-$dark: #1D1D1D;
-$positive: #21BA45;
-$negative: #C10015;
+$secondary: #21ba45;
+$accent: #9c27b0;
+$dark: #1d1d1d;
+$positive: #21ba45;
+$negative: #c10015;
 $info: #69bd4396;
-$warning: #F2C037;
+$warning: #f2c037;
