--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -9,8 +9,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 $primary: #69bd43;
-$secondary: #21ba45;
-$accent: #9c27b0;
+$secondary: #6f9779;
+$accent: #bbe5c5;
 $dark: #1d1d1d;
 $positive: #21ba45;
 $negative: #c10015;
